Rework slider nav to be displayed bellow the slider for better contrast, fixes #125

--- a/scss/partials/_project_page.scss
+++ b/scss/partials/_project_page.scss
@@ -27,15 +27,18 @@
     height: auto;
     max-width: $slider-width;
     max-height: $slider-height;
-    margin-bottom: 2rem;
 
-    .inner {
+    .sizer {
       width: 100%;
       padding-top: math.div($slider-height, $slider-width) * 100%;
 
       img {
         width: 640px;
       }
+    }
+
+    .slide-nav {
+      margin-bottom: -1em;
     }
   }
 
